[package]
name = "portsmith"
version = "1.0.0"
edition = "2024"
authors = ["Shubhang Dixit"]
description = "Take control of your ports — a tiny, fast, cross-platform CLI to see, free, and manage the ports your projects use."
license = "MIT"
repository = "https://github.com/shubhang-d/portman"
homepage = "https://github.com/shubhang-d/portman"
readme = "README.md"
keywords = ["port", "cli", "process", "kill", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
listeners = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39.3"
